--- a/public/upload.html
+++ b/public/upload.html
@@ -31,6 +31,8 @@
     <input type="text" class="form-control mt-2" placeholder="price" id="price">
     <input type="file" class="form-control mt-2" placeholder="file" id="image">
     <button class="btn btn-danger mt-3" id="send">등록</button>
+    <input type="file" name="" id="">
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
